exports[`test hint text can be hidden 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
  style={
    Object {
      "boxSizing": "border-box",
      "width": "100%",
    }
  }>
  <span
    data-radium={true}
    style={
      Object {
        "color": "#878c94",
        "display": "block",
        "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
        "fontSize": "14px",
        "lineHeight": 1.285,
        "opacity": 0,
        "transition": "opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    } />
</div>
`;

exports[`test hint text can display text content 1`] = `
<div
  data-radium={true}
  onClick={[Function]}
  style={
    Object {
      "boxSizing": "border-box",
      "width": "100%",
    }
  }>
  <span
    data-radium={true}
    style={
      Object {
        "color": "#878c94",
        "display": "block",
        "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
        "fontSize": "14px",
        "lineHeight": 1.285,
        "opacity": 1,
        "transition": "opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }>
    hint text
  </span>
</div>
`;
